--- a/config.env
+++ b/config.env
@@ -1,6 +1,6 @@
 
 NODE_ENV="development"
-PORT=4000
+PORT=4001
 //JWT
 JWT_SIGN="laclavemasdificildelmundo"
 //DB
@@ -17,3 +17,6 @@ MAIL_FROM="samirdev9669@gmail.com"
 // TESTING
 
 POSTGRES_DB_TEST="dbtesting"
+
+
+SENDGRID_API_KEY="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"
