--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
 		"joi": "^17.7.0",
 		"jsonwebtoken": "^8.5.1",
 		"nodemailer": "^6.8.0",
+		"nodemailer-sendgrid": "^1.0.3",
 		"pdfkit": "^0.13.0",
 		"pg": "^8.8.0",
 		"pg-hstore": "^2.3.4",
