--- a/config.env
+++ b/config.env
@@ -4,9 +4,9 @@ PORT=4001
 //JWT
 JWT_SIGN="laclavemasdificildelmundo"
 //DB
-POSTGRES_HOST="localhost"
-POSTGRES_USERNAME="postgres"
-POSTGRES_PASSWORD="4231Samir"
+POSTGRES_HOST="dpg-cg5nl5e4daddn4p5gq20-a.oregon-postgres.render.com"
+POSTGRES_USERNAME="test_back_user"
+POSTGRES_PASSWORD="eEiqCP9wgXc2iHSdB6YQtkdiWf6Wnz2P"
 POSTGRES_PORT=5432
 POSTGRES_DB="prueba"
 
