--- a/config.env
+++ b/config.env
@@ -8,7 +8,7 @@ POSTGRES_HOST="dpg-cg5nl5e4daddn4p5gq20-a.oregon-postgres.render.com"
 POSTGRES_USERNAME="test_back_user"
 POSTGRES_PASSWORD="eEiqCP9wgXc2iHSdB6YQtkdiWf6Wnz2P"
 POSTGRES_PORT=5432
-POSTGRES_DB="prueba"
+POSTGRES_DB="test_back"
 
 //EMAIL
 MAIL_FROM="samirdev9669@gmail.com"
